Implement SVG event handling and graph rendering features
- Added enableSVGEvents function to handle zooming and panning on SVG elements.
- Integrated event handling for mouse wheel and drag events to enhance user interaction.
- Developed render function for graph visualization using D3 and Graphviz, including node and edge rendering.
- Introduced utility functions for converting polygon shapes to rectangles and managing graph settings.
- Enhanced utility functions for fetching game object data, including buildings, resources, and recipes.
- Implemented URL handling for item targeting in the application.

--- a/app/globals.css
+++ b/app/globals.css
@@ -89,10 +89,10 @@ body {
 }
 
 hr {
-  @apply border-surface-a40 border-2 mb-2;
+  @apply border-surface-a40 border;
 }
 
-input[type="number"] {
+input {
   @apply bg-surface-a20 rounded-md outline-none;
 }
 
@@ -101,9 +101,18 @@ input[type="number"]::-webkit-inner-spin-button {
   display: none;
 }
 
+button {
+  cursor: pointer;
+  outline: none;
+}
+
+#graph-container rect, path, polygon {
+  transition: stroke .15s ease, fill 0.5s ease;
+}
+
 ::-webkit-scrollbar {
   width: 6px;
-  height: 6px
+  height: 6px;
 }
 
 ::-webkit-scrollbar-track {
