--- a/app/globals.css
+++ b/app/globals.css
@@ -128,6 +128,14 @@ button {
   scrollbar-width: none;
 }
 
+.react-flow__controls-button {
+  background: none;
+}
+
+.react-flow__controls-button:hover {
+  background: none;
+}
+
 @keyframes rippleEffect {
   to {
     transform: scale(20);
